	PR c++/82728 - wrong -Wunused-but-set-variable

PR c++/82799
	PR c++/83690
	* call.c (perform_implicit_conversion_flags): Call mark_rvalue_use.
	* decl.c (case_conversion): Likewise.
	* semantics.c (finish_static_assert): Call
	perform_implicit_conversion_flags.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@256550 138bc75d-0d04-0410-961f-82ee72b054a4